json-server API relationship

--- a/demo_assignment_1/index.html
+++ b/demo_assignment_1/index.html
@@ -32,6 +32,7 @@
 
     <!-- Controllers -->
     <script src="./controllers/AboutController.js"></script>
+    <script src="./controllers/ProductController.js"></script>
 
     <script>
         var app = angular.module('demo-assignment-1', ['ngRoute']);
