--- a/demo_assignment_1/index.html
+++ b/demo_assignment_1/index.html
@@ -33,6 +33,8 @@
     <!-- Controllers -->
     <script src="./controllers/AboutController.js"></script>
     <script src="./controllers/ProductController.js"></script>
+    <script src="./controllers/CategoryController.js"></script>
+    <script src="./controllers/CategoryDetailController.js"></script>
 
     <script>
         var app = angular.module('demo-assignment-1', ['ngRoute']);
