--- a/demo_assignment_1/index.html
+++ b/demo_assignment_1/index.html
@@ -30,11 +30,15 @@
     <script src="./libs/angular.min.js"></script>
     <script src="./libs/angular-route.min.js"></script>
 
+    <!-- Config -->
+    <script src="./config/api.js"></script>
+
     <!-- Controllers -->
     <script src="./controllers/AboutController.js"></script>
     <script src="./controllers/ProductController.js"></script>
     <script src="./controllers/CategoryController.js"></script>
     <script src="./controllers/CategoryDetailController.js"></script>
+    <script src="./controllers/CategoryCreateController.js"></script>
 
     <script>
         var app = angular.module('demo-assignment-1', ['ngRoute']);
