--- a/demo_assignment_1/pages/category.html
+++ b/demo_assignment_1/pages/category.html
@@ -1,5 +1,10 @@
 <div>
     <h5>Danh mục sản phẩm</h5>
+    <div>
+        <a href="#!/categories/create">
+            <button class="btn btn-success">Tạo mới</button>
+        </a>
+    </div>
     <div class="row">
         <!-- ng-repeat="tên_phần_tử_tự_đặt_trong_từng_vòng_lặp in tên_mảng_được_truyền_từ_controller" -->
         <div class="col-3" ng-repeat="item in categories">
