--- a/demo_assignment_1/pages/category.html
+++ b/demo_assignment_1/pages/category.html
@@ -15,6 +15,7 @@
                 </a>
             </div>
             <div>Ten danh muc: {{item.name}}</div>
+            <div><img src="{{item.imageUrl}}" alt=""></div>
             <ul>
                 <li ng-repeat="product in item.products">
                     {{product.name}} - {{product.price}}
