--- a/angularjs-router/pages/home.html
+++ b/angularjs-router/pages/home.html
@@ -2,7 +2,7 @@
     <p>Họ tên: {{name}}</p>
     <p>MSV: {{id}}</p>
     <div>
-        <img src="https://iap.poly.edu.vn/user/ph/PH22625.jpg"
+        <img width="100" height="100" src="https://iap.poly.edu.vn/user/ph/PH22625.jpg"
         alt="">
     </div>
 </div>
