--- a/angularjs-router/index.html
+++ b/angularjs-router/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angularjs Router</title>
 </head>
+
 <body ng-app="angularjs-router">
-    <custom-header></custom-header>
+    <!-- <custom-header></custom-header> -->
+    <header>HEADER 1231231</header>
+    <nav>
+        <a href="#!/">Trang chủ</a>
+        <a href="#!/ds-nguoi-dung">DS người dùng</a>
+    </nav>
+
     <main>
         <div ng-view></div>
     </main>
@@ -16,6 +24,7 @@
     <script src="./libs/angular.min.js"></script>
     <script src="./libs/angular-route.min.js"></script>
     <script src="./controllers/HomeController.js"></script>
+    <script src="./controllers/ListController.js"></script>
     <script>
         var app = angular.module(
             'angularjs-router',
@@ -30,10 +39,10 @@
                     templateUrl: './pages/home.html',
                     controller: HomeController
                 })
-                // .when('/about', {
-                //     templateUrl: './pages/about.html',
-                //     controller: AboutController
-                // })
+                .when('/ds-nguoi-dung', {
+                    templateUrl: './pages/list.html',
+                    controller: ListController
+                })
                 .when('/404', {
                     templateUrl: './pages/404.html',
                 })
@@ -43,4 +52,5 @@
         });
     </script>
 </body>
+
 </html>
