--- a/angularjs/ql-nguoi-yeu.html
+++ b/angularjs/ql-nguoi-yeu.html
@@ -21,6 +21,37 @@
                 </div>
             </div>
             <div>
+                <div>
+                    <div>
+                        <button ng-click="showForm()">
+                            Thêm mới
+                        </button>
+                    </div>
+                    <div ng-if="isShowForm">
+                        <form>
+                            <input
+                                placeholder="Tên người yêu"
+                                ng-model="inputs.ten"
+                            >
+                            <p
+                                style="color:red"
+                                ng-if="!inputs.ten"
+                            >Yêu cầu nhập tên</p>
+                            <input
+                                placeholder="Tuổi người yêu"
+                                ng-model="inputs.tuoi"
+                                type="number"
+                            >
+                            <!-- Kiểm tra việc lắng nghe dữ liệu của ng-model -->
+                            <button ng-click="hideForm()">
+                                Huỷ
+                            </button>
+                            <button type="button"
+                                ng-click="onSave()"
+                            >Lưu</button>
+                        </form>
+                    </div>
+                </div>
                 <h1>Danh sách người yêu</h1>
                 <table>
                     <thead><tr>
@@ -28,6 +59,7 @@
                         <th>Tên</th>
                         <th>Tuổi</th>
                         <th>Trạng thái</th>
+                        <th>Hành động</th>
                     </tr></thead>
                     <tbody>
                         <!-- ng-repeat="phần_tử_sau_mỗi_vòng_lặp in danh_sách" -->
@@ -44,9 +76,14 @@
                                     )
                             }}</td>
                             <!-- Sử dụng ng-if với 3 trường hợp -->
-                            <td ng-if="tung_ny.trang_thai == 1">Đang yêu</td>
+                            <!-- <td ng-if="tung_ny.trang_thai == 1">Đang yêu</td>
                             <td ng-if="tung_ny.trang_thai == 2">Đã chia tay</td>
-                            <td ng-if="tung_ny.trang_thai == 0">Đang dỗi</td>
+                            <td ng-if="tung_ny.trang_thai == 0">Đang dỗi</td> -->
+                            <td>
+                                <button ng-click="onDelete(tung_ny.id)">
+                                    Xoá
+                                </button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -74,6 +111,16 @@
                     sdt: '0392888888',
                     so_thich: 'Phi cong',
                     trang_thai: 1 // 0 hoac 1
+                },
+                {
+                    id: 2,
+                    ten: 'Nguyen Thi B',
+                    biet_danh: 'Meo meo',
+                    tuoi: 40,
+                    dia_chi: 'Royal city',
+                    sdt: '0392888888',
+                    so_thich: 'Phi cong',
+                    trang_thai: 1 // 0 hoac 1
                 }
             ];
 
@@ -83,8 +130,67 @@
             };
             $scope.layTuoi = function (e) {
                 luu_tru_tuoi = e.target.value;
+            };
+
+            // Biến isShowForm thể hiện trạng thái hiển thị của form
+            $scope.isShowForm = false;
+            // Khi bấm thêm mới thì sẽ cập nhật giá trị cho isShowForm = true
+            $scope.showForm = function () {
+                $scope.isShowForm = true;
+            }
+            $scope.hideForm = function () {
+                $scope.isShowForm = false;
+            }
+            // Chỉ cần thay đổi nd input có ng-model
+            // thì sẽ tự động gán luôn
+            $scope.inputs = {
+                ten: '',
+                tuoi: 0,
+                // Những thông tin bên dưới mặc định và chưa có ng-model lắng nghe
+                biet_danh: '',
+                dia_chi: '',
+                sdt: '',
+                so_thich: '',
+                trang_thai: 0
+            };
+            // Khi bấm lưu sẽ gọi vào onSave()
+            $scope.onSave = function () {
+                // Tạo phần tử mới có id tăng dần
+                var newObj = {
+                    ...$scope.inputs, // Lấy toàn bộ thuộc tính của obj nhét vào đây
+                    tuoi: +$scope.inputs.tuoi, // ép kiểu từ chuỗi về số
+                    id: $scope.ds_nguoi_yeu.length + 1 // lấy độ dài mảng + 1
+                };
+                console.log(newObj);
+                // Thêm phần tử mới vào danh sách
+                $scope.ds_nguoi_yeu.push(newObj);
+                // Bỏ giá trị đang có ở input về mặc định
+                $scope.inputs.ten = '';
+                $scope.inputs.tuoi = 0;
+                // Ẩn form thêm mới đi
+                $scope.hideForm();
+
+            };
+
+            // Xoá
+            $scope.onDelete = function(deleteId) {
+                console.log(deleteId)
+                // Xác nhận chắc chắn xoá
+                var isConfirm = confirm('Bạn có muốn xoá không');
+                if (!isConfirm) {
+                    return;
+                }
+                // Tạo ds mới loại bỏ phần tử cần xoá
+                // Filter sẽ lọc phần tử thoả mãn đk là có id khác id cần xoá
+                var newList = $scope.ds_nguoi_yeu.filter(function (item) {
+                    return item.id != deleteId;
+                });
+                // Gán ds bằng ds mới đã loại bỏ phần tử
+                $scope.ds_nguoi_yeu = newList;
             }
         });
+
+
     </script>
 </body>
 </html>
