--- a/angularjs-route/pages/trang-chu.html
+++ b/angularjs-route/pages/trang-chu.html
@@ -1,1 +1,5 @@
-<h1>ND {{title}}</h1>
+<!-- trang-chu.html -->
+<!-- Toàn bộ phần html sẽ hiển thị ở ng-view
+    Khi người dùng vào đường dẫn #!/
+-->
+<h1>Trang chủ trong ./pages/trang-chu.html {{content}}</h1>
