--- a/angularjs-route/pages/quan-ly-chi-tiet.html
+++ b/angularjs-route/pages/quan-ly-chi-tiet.html
@@ -1,6 +1,7 @@
 <div>
     <h1>Thông tin cá nhân</h1>
-    <p>Tên: {{thong_tin_ca_nhan.ten}}</p>
-    <p>Tuổi: {{thong_tin_ca_nhan.tuoi}}</p>
-    <p>Địa chỉ: {{thong_tin_ca_nhan.dia_chi}}</p>
+    <p>ID: {{ma_ny}}</p>
+    <p>Tên: {{ten_ny}}</p>
+    <!-- <p>Tuổi: {{thong_tin_ca_nhan.tuoi}}</p>
+    <p>Địa chỉ: {{thong_tin_ca_nhan.dia_chi}}</p> -->
 </div>
