--- a/angularjs-route/pages/quan-ly.html
+++ b/angularjs-route/pages/quan-ly.html
@@ -43,7 +43,7 @@
                 <td ng-if="tung_ny.trang_thai == 2">Đã chia tay</td>
                 <td ng-if="tung_ny.trang_thai == 0">Đang dỗi</td> -->
                 <td>
-                    <a href="#!/quan-ly-chi-tiet">
+                    <a href="#!/quan-ly-chi-tiet/{{tung_ny.id}}/{{tung_ny.ten}}">
                         <button>
                             Chi tiết
                         </button>
