API with loading

--- a/angularjs-route/index.html
+++ b/angularjs-route/index.html
@@ -48,7 +48,7 @@
                 })
                 // Nếu đường dẫn cần nhận giá trị thì đặt sau dấu :
                 // Trong controller sẽ dùng $location.params.id để lấy gtri
-                .when('/quan-ly-chi-tiet/:id/:name', {
+                .when('/quan-ly-chi-tiet/:id', {
                     templateUrl: './pages/quan-ly-chi-tiet.html',
                     controller: GirlFriendDetailController
                 })
