--- a/angularjs-route/pages/quan-ly.html
+++ b/angularjs-route/pages/quan-ly.html
@@ -135,7 +135,7 @@
                             Chi tiết
                         </button>
                     </a>
-                    <a href="#!/quan-ly-sua">
+                    <a href="#!/quan-ly-sua/{{tung_ny.id}}">
                         <button>
                             Sửa
                         </button>
